--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: cookery_notes
 
 # Name of the container image.
-image: your-user/cookery_notes
+image: cjgilbert/cookery-notes
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 135.181.30.249
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +19,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: cookerynotes.com
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: cjgilbert
 
   # Always use an access token rather than real password when possible.
   password:
@@ -88,8 +88,9 @@ builder:
   #   - RAILS_MASTER_KEY
 
 # Use a different ssh user than root
-# ssh:
-#   user: app
+ssh:
+  user: root
+  port: "21"
 
 # Use accessory services (secrets come from .kamal/secrets).
 # accessories:
