--- a/test/fixtures/ingredient_groups.yml
+++ b/test/fixtures/ingredient_groups.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+crab_linguine_main:
+  recipe: crab_linguine
+  name: "Main"
+
+roast_chicken_main:
+  recipe: roast_chicken_and_gravy
+  name: "Main"
+
+roast_chicken_gravy:
+  recipe: roast_chicken_and_gravy
+  name: "For the gravy"
