--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -2,6 +2,7 @@
 
 crab_linguine:
   title: The Ultimate Crab Linguine
+  status: published
   servings: "4"
   prep_time_mins: 5
   cook_time_mins: 10
@@ -10,6 +11,7 @@ crab_linguine:
 
 roast_chicken_and_gravy:
   title: Roast Chicken and Gravy
+  status: published
   servings: "4-6"
   prep_time_mins: 20
   cook_time_mins: 90
